--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,18 @@
-version https://git-lfs.github.com/spec/v1
-oid sha256:7f0a363298ab820ea4732f0028466808593df301d16f3dd032c9829c587c3dff
-size 187
+streamlit
+pandas
+numpy<2.0
+pykrx
+joblib
+scikit-learn
+scipy
+transformers
+sentencepiece
+torch
+matplotlib
+imbalanced-learn
+pandas-ta
+
+# 선택 사항: 특정 모델 구동 시 필요
+# xgboost
+# tensorflow
+# pytorch-forecasting
